examples/type_system/failing/82_match_list_missing_empty.flx
// E015: List match missing empty branch.
let xs = [1, 2];

match xs {
    [h | t] -> h
};
